AbstractStorageTest.java updated